[package]
name = "shareware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
iroh = "0.7.0"
rand = "0.8.5"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = "1.33.0"
tokio-util = "0.7.9"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
